bug in banner z-index fixed

--- a/css/main.css
+++ b/css/main.css
@@ -337,7 +337,7 @@ body {
     bottom : 53%;
     background-color : #fff; 
     //border : solid 1px #000;	
-    z-index : -10;	
+    z-index : -12;	
 }
 
 #element_workshop_4{
@@ -547,7 +547,7 @@ body {
 
 .countdown{
     position : absolute;
-    left : 12%;
+    left : 13%;
     bottom : 5%;
     height : 23%;
     width : 7%;
@@ -558,6 +558,7 @@ body {
     z-index : -100; 
     font-size: 20pt;
     font-family: "Helvetica",serif;
+	font-weight : 900;
     opacity: .95;
 }
 
